[package]
name = "mamestagram-pp-js"
version = "1.0.0"
description = "osu! difficulty and pp calculation for all modes"
authors = ["Max Ohn"]
license = "MIT"
edition = "2021"
exclude = ["index.node"]

[lib]
name = "mamestagram_pp_js"
crate-type = ["cdylib"]

[dependencies]
neon = { version = "0.10", default-features = false, features = ["napi-6"] }
akatsuki-pp = { git = "https://github.com/Mamestagram/mamestagram-pp-rs", rev = "a42bfea12da319046c3fd7df5e95c8c66e20acb9" }
